server_test.log
[Knowledge] 知识库模块已加载，使用 /api/knowledge/init 初始化向量库
============================================================
鎯呯华鎰堢枟骞冲彴 - 鍚庣鏈嶅姟鍚姩
============================================================
鏈嶅姟鍦板潃: http://localhost:5000
API妯″潡:
  - 鎯呯华璇嗗埆: /api/emotion/*
  - 鍋ュ悍鎶ュ憡: /api/report/*
  - 鍟嗗煄API:   /api/store/*
  - 鎺ㄨ崘寮曟搸:  /api/recommend/*
  - 鐭ヨ瘑搴揂PI: /api/knowledge/*
  - 瀹夊叏妯″潡:  /api/auth/*
============================================================
 * Serving Flask app 'app'
 * Debug mode: on
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://192.168.110.228:5000
Press CTRL+C to quit
 * Restarting with stat
[Knowledge] 知识库模块已加载，使用 /api/knowledge/init 初始化向量库
 * Debugger is active!
 * Debugger PIN: 281-982-430
127.0.0.1 - - [12/Mar/2026 09:15:42] "GET /api/health HTTP/1.1" 200 -
127.0.0.1 - - [12/Mar/2026 09:15:46] "POST /api/emotion/analyze HTTP/1.1" 500 -
127.0.0.1 - - [12/Mar/2026 09:16:27] "GET /api/health HTTP/1.1" 200 -
127.0.0.1 - - [12/Mar/2026 09:16:29] "POST /api/emotion/analyze HTTP/1.1" 200 -
127.0.0.1 - - [12/Mar/2026 09:16:31] "POST /api/emotion/record HTTP/1.1" 200 -
127.0.0.1 - - [12/Mar/2026 09:17:01] "GET /api/emotion/history?user_id=1&days=7 HTTP/1.1" 200 -
127.0.0.1 - - [12/Mar/2026 09:17:03] "GET /api/emotion/stats?user_id=1&days=7 HTTP/1.1" 200 -
127.0.0.1 - - [12/Mar/2026 09:17:05] "GET /api/store/products HTTP/1.1" 200 -
127.0.0.1 - - [12/Mar/2026 09:17:07] "GET /api/recommend/daily?user_id=1 HTTP/1.1" 404 -
127.0.0.1 - - [12/Mar/2026 09:18:02] "GET /api/recommend/products?user_id=1&emotion=joy HTTP/1.1" 200 -
127.0.0.1 - - [12/Mar/2026 09:18:04] "GET /api/knowledge/articles?category=情绪管理 HTTP/1.1" 404 -
127.0.0.1 - - [12/Mar/2026 09:18:06] "POST /api/auth/login HTTP/1.1" 401 -
 * Detected change in 'd:\\shixi\\AIGC_mood\\AIGC_mood\\config.py', reloading
============================================================
鎯呯华鎰堢枟骞冲彴 - 鍚庣鏈嶅姟鍚姩
============================================================
鏈嶅姟鍦板潃: http://localhost:5000
API妯″潡:
  - 鎯呯华璇嗗埆: /api/emotion/*
  - 鍋ュ悍鎶ュ憡: /api/report/*
  - 鍟嗗煄API:   /api/store/*
  - 鎺ㄨ崘寮曟搸:  /api/recommend/*
  - 鐭ヨ瘑搴揂PI: /api/knowledge/*
  - 瀹夊叏妯″潡:  /api/auth/*
============================================================
 * Restarting with stat
  File "d:\shixi\AIGC_mood\AIGC_mood\app.py", line 30
    技术栈：Python Flask + MySQL + SQLAlchemy + JWT
       ^
SyntaxError: invalid character '：' (U+FF1A)
